# pretalx-signals-demo

./: MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: style.yml
pretalx_signals_demo/: apps.py  forms.py  models.py  signals.py
pretalx_signals_demo/migrations/: 0001_initial.py
